Remove ugly yellow and test scroll bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -334,3 +334,127 @@
 
 
 <router-outlet />
+
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p><p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p><p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p><p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p><p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p><p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p><p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p><p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p><p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p><p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
+<p>Lorem stuff</p>
