Added work experience.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="container mt-lg-5" style="max-width:70%">
+<div class="container mt-5" style="max-width:70%">
 
   <div class="row row-cols-2" >
 
-    <div class="col-md-2 border">
+    <div class="col-md-3 border">
       <div class="row border">
         <div class="col-12" style="padding: 30px; background:#35879A; text-align: center; color: white;">
           <div class="profile-container">
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <div class="col-md-10 border">
+    <div class="col-md-9 border">
       <div class="row border">
         <div class="col-12">
           <h2>Introduction</h2>
@@ -43,6 +43,84 @@
 
         <div class="col-12">
           <h2>Recent Professional Experience</h2>
+          <p>
+            <span style="float:left"><b>SMITH JOHNSON GROUP</b></span><span style="float:right"><b>Salt Lake City, Utah</b></span> <br/>
+            <span style="float:left"><i>Independent Consultant / Team Lead</i></span><span style="float:right"><i>January 2018 – Current</i></span> <br/>
+          </p>
+          <ul>
+            <li>
+              Developed Web API using Spring Boot and AWS to integrate with existing applications using Spring MVC and utilizing other Spring technologies.
+            </li>
+            <li>
+              Led a team of TEN to rewrite existing AngularJS applications into Angular while still meeting demands for new features.
+            </li>
+            <li>
+              Integrated OAuth2 security model using Spring Security into applications to meet technology requirements.
+            </li>
+            <li>
+              Acted as Architect, Team Lead, UI/UX designer, Quality Assurance, and Product Owner at different phases of the project to drive products to release.
+            </li>
+            <li>
+              Fulfilled requirements to develop many smaller applications using Spring Boot deploying to ECS.
+            </li>
+          </ul>
+
+          <p>
+            <span style="float:left"><b>NATIONAL CASH REGISTER</b></span><span style="float:right"><b>Draper, Utah</b></span> <br/>
+            <span style="float:left"><i>Senior Java Software Developer</i></span><span style="float:right"><i>September 2016 – January 2018</i></span> <br/>
+          </p>
+          <ul>
+            <li>
+              Coded a Microservices API layer using Spring Boot and REST endpoints to a StompJS (Websocket front-end).
+            </li>
+            <li>
+              Defined the architecture for a self-contained testing harness to support a behavior driven testing approach to provide testing verification across cross functional teams.
+            </li>
+            <li>
+              Assisted .net team in understanding Java technologies while providing mentoring to junior QA.
+            </li>
+          </ul>
+
+          <p>
+            <span style="float:left"><b>UTAH STATE -- Department of Public Safety</b></span><span style="float:right"><b>Taylorsville, Utah</b></span> <br/>
+            <span style="float:left"><i>Mid Software Engineer</i></span><span style="float:right"><i>January 2015 – September 2016</i></span> <br/>
+          </p>
+          <ul>
+            <li>
+              Rewrote the authentication system to use Google authentication for two factor support.
+            </li>
+            <li>
+              Trusted to work on high profile systems such as Amber Alert, and application login.
+            </li>
+            <li>
+              Configured Spring Beans for Spring Framework components such as Spring JPA, and created REST endpoints for an AngularJS front-end.
+            </li>
+          </ul>
+
+          <p>
+            <span style="float:left"><b>NORTHWEST RESEARCH</b></span><span style="float:right"><b>West Valley City, Utah</b></span> <br/>
+            <span style="float:left"><i>Junior Software Engineer</i></span><span style="float:right"><i>January 2015 – September 2016</i></span> <br/>
+          </p>
+          <ul>
+            <li>
+              Maintained primary web applications which involved fixing bugs, adding, and supporting features.
+            </li>
+            <li>
+              Primary report designer and implementer, from requirements to Front-end to SQL.
+            </li>
+            <li>
+              Performed SQL query optimization to improve database performance.
+            </li>
+            <li>
+              Maintained a legacy .net application which was used on a handheld which was used in the warehouse.
+            </li>
+          </ul>
+
+          <p>
+            <span style="float:left"><b>UNITED STATES NAVY</b></span><span style="float:right"><b>Pacific Fleet</b></span> <br/>
+            <span style="float:left"><i>Electronics Technician (Petty Officer Second class -- E5)</i></span><span style="float:right"><i>1999 – 2005</i></span> <br/>
+          </p>
+
 
         </div>
       </div>
