Made printable and removed borders.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,3 +12,11 @@
   margin-top: 0;
   margin-bottom: 0;
 }
+
+@media print {
+  .container {
+    max-width: 100% !important;
+  }
+
+  .page-break {page-break-before: always;}
+}
