--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="container mt-5" style="max-width:70%">
+<div class="container mt-3 mb-3" style="max-width:70%">
 
   <div class="row row-cols-2" >
 
-    <div class="col-md-3 border">
-      <div class="row border">
+    <div class="col-2">
+      <div class="row">
         <div class="col-12" style="padding: 30px; background:#35879A; text-align: center; color: white;">
           <div class="profile-container">
             <img alt="Photo" class="img-fluid" src="assets/img/Photo.png">
@@ -11,14 +11,14 @@
             <h3 class="tagline">Full Stack Developer</h3>
           </div>
         </div>
-        <div class="col-12" style="background:#42A8C0; color: white;">
+        <div class="col-12 d-none" style="background:#42A8C0; color: white;">
           <p>Summary</p>
         </div>
       </div>
     </div>
 
-    <div class="col-md-9 border">
-      <div class="row border">
+    <div class="col-10 ">
+      <div class="row p-2">
         <div class="col-12">
           <h2>Introduction</h2>
           <p>
@@ -36,7 +36,7 @@
             <b class="ps-5">BACK-END:</b> Java 21, Spring Boot, Spring MVC, Spring Security, Spring Batch, Spring JPA, AOP <br/>
             <b class="ps-5">TECHNOLOGIES:</b> REST, JSON, CSV, YAML, HTTP (Microservices), OAuth2 <br/>
             <b class="ps-5">DATABASES:</b> Microsoft SQL, Postgresql, Oracle, Flyway <br/>
-            <b class="ps-5">TOOLS:</b> WebStorm, IntelliJ, GIT, Tomcat, JBoss <br/>
+            <b class="ps-5">TOOLS:</b> WebStorm, IntelliJ, GIT, Tomcat, JBoss, Postman, Swagger <br/>
             <b class="ps-5">CLOUD TECHNOLOGIES:</b> (AWS) S3, ECS, CloudWatch, Secrets, Parameter Store, etc…
           </p>
         </div>
@@ -65,7 +65,7 @@
             </li>
           </ul>
 
-          <p>
+          <p class="page-break">
             <span style="float:left"><b>NATIONAL CASH REGISTER</b></span><span style="float:right"><b>Draper, Utah</b></span> <br/>
             <span style="float:left"><i>Senior Java Software Developer</i></span><span style="float:right"><i>September 2016 – January 2018</i></span> <br/>
           </p>
