--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-3 mb-3" style="max-width:70%">
+<div class="container mt-4 mb-4">
 
   <div class="row row-cols-2" >
 
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <div class="col-10 ">
+    <div class="col-10">
       <div class="row p-2">
         <div class="col-12">
           <h2>Introduction</h2>
