Added font awesome.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   <div class="row row-cols-2" >
 
-    <div class="col-2">
+    <div class="col-3">
       <div class="row">
         <div class="col-12" style="padding: 30px; background:#35879A; text-align: center; color: white;">
           <div class="profile-container">
@@ -11,13 +11,25 @@
             <h3 class="tagline">Full Stack Developer</h3>
           </div>
         </div>
-        <div class="col-12 d-none" style="background:#42A8C0; color: white;">
-          <p>Summary</p>
+        <div class="col-12 pt-2" style="background:#42A8C0; color: white;">
+          <p class="fs-6 fw-lighter font-monospace"><i class="fa-solid fa-phone"></i>
+            <a class="ps-2 text-white" href="tel:385-204-3661">(385) 204-3661</a>
+          </p>
+          <p class="fs-6 fw-lighter font-monospace"><i class="fa-solid fa-envelope"></i>
+            <a class="ps-2 text-white" href="mailto:bashepley&#64;gmail.com">bashepley&#64;gmail.com</a>
+          </p>
+          <p class="fs-6 fw-lighter font-monospace"><i class="fa-brands fa-linkedin"></i>
+            <a class="ps-2 text-white" target="_blank" href="http://www.linkedin.com/in/benjamin-s-398128239">LinkedIn</a>
+          </p>
+          <p class="fs-6 fw-lighter font-monospace"><i class="fa-brands fa-github"></i>
+            <a class="ps-2 text-white" target="_blank" href="https://github.com/logicmuffin255">GitHub</a>
+          </p>
+
         </div>
       </div>
     </div>
 
-    <div class="col-10">
+    <div class="col-9">
       <div class="row p-2">
         <div class="col-12">
           <h2>Introduction</h2>
@@ -61,7 +73,7 @@
               Acted as Architect, Team Lead, UI/UX designer, Quality Assurance, and Product Owner at different phases of the project to drive products to release.
             </li>
             <li>
-              Fulfilled requirements to develop many smaller applications using Spring Boot deploying to ECS.
+              Fulfilled requirements to develop many smaller applications using Spring Boot deploying to ECS and S3.
             </li>
           </ul>
 
@@ -99,7 +111,7 @@
 
           <p>
             <span style="float:left"><b>NORTHWEST RESEARCH</b></span><span style="float:right"><b>West Valley City, Utah</b></span> <br/>
-            <span style="float:left"><i>Junior Software Engineer</i></span><span style="float:right"><i>January 2015 – September 2016</i></span> <br/>
+            <span style="float:left"><i>Junior Software Engineer</i></span><span style="float:right"><i>December 2012 – January 2015</i></span> <br/>
           </p>
           <ul>
             <li>
