Added personal projects section.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -133,6 +133,33 @@
             <span style="float:left"><i>Electronics Technician (Petty Officer Second class -- E5)</i></span><span style="float:right"><i>1999 – 2005</i></span> <br/>
           </p>
 
+          <div class="col-12">
+            <h2>Recent Personal Experience</h2>
+            <p>
+              <span style="float:left"><b>Stardew Valley Mod Manager 3</b></span><span style="float:right"><b><a href="https://github.com/logicmuffin255/SVMM3">https://github.com/logicmuffin255/SVMM3</a></b></span> <br/>
+            </p>
+            <p>
+              <b>Technologies Used:</b> Spring Boot, Java 21, SWING, Jackson <br/>
+              <b>Status:</b> Public -- Ongoing
+            </p>
+            <ul>
+              <li>I developed a Java desktop application to better manage Stardew Valley Mods. The application is designed to store mods in profiles allowing for multiple setups depending on the desired gaming experience. </li>
+            </ul>
+
+            <p>
+              <span style="float:left"><b>Personal Portfolio</b></span><span style="float:right"><b><a href="https://github.com/logicmuffin255/logicmuffin255.github.io">https://github.com/logicmuffin255/logicmuffin255.github.io</a></b></span> <br/>
+            </p>
+            <p>
+              <b>Technologies Used:</b> HTML5, CSS3, Angular, TypeScript, Bootstrap 5<br/>
+              <b>Status:</b> Public -- Complete
+            </p>
+            <ul>
+              <li>I developed a personal single page web application in Angular to showcase my skills as a frontend developer. The site uses Bootstrap 5 and Angular 17</li>
+              <li>The website is hosted using GitHub pages and can be found at: <a href="https://logicmuffin255.github.io/">https://logicmuffin255.github.io/</a>.</li>
+            </ul>
+
+          </div>
+
 
         </div>
       </div>
